--- a/06_counter_useState/src/App.css
+++ b/06_counter_useState/src/App.css
@@ -1,7 +1,3 @@
-.button {
-  padding: 10px 20px;
-  background-color: lightblue;
-  border-radius: 50%;
-  border-color: transparent;
-  color: black;
+input {
+  display: block;
 }
